deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: choreography
---
apiVersion: v1
kind: Service
metadata:
  name: courier-app
  namespace: choreography
spec:
  selector:
    app: courier-app
  ports:
  - port: 8080
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courier-ingress
  namespace: choreography
spec:
  ingressClassName: nginx
  rules:
    - host: courier-service.com
      http:
        paths:
          - path: /api/v1/courier
            pathType: Prefix
            backend:
              service:
                name: courier-app
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courier-app
  namespace: choreography
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courier-app
  template:
    metadata:
      labels:
        app: courier-app
    spec:
      containers:
      - name: courier-app
        image: 211125719632.dkr.ecr.eu-central-1.amazonaws.com/saga-choreography/courier:4344a56
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            cpu: 250m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 120
          failureThreshold: 10
          timeoutSeconds: 5
          periodSeconds: 3
      imagePullSecrets:
        - name: ecr-key
